[project]
name = "luq"
version = "0.1.0"
description = "Local LUQ (Long-text Uncertainty Quantification) reimplementation + MCP tool"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.2",
    "transformers",
    "torch",
    "sentence-transformers",
    "datasets",
    "scipy",
    "spacy",
    "sentencepiece",
    "matplotlib>=3.10.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/luq"]
